FZ54A-22-game-opening-test/ fixing character visibility on high score

--- a/style-game.css
+++ b/style-game.css
@@ -413,7 +413,7 @@
     height: 550px;
     width: 500px;
     background-color: black;
-    z-index: 1;
+    z-index: 10;
     color: white;
     position: absolute;
     display: flex;
